# ai-drone-sim-px4-gz

./: README.md  docker-compose.yml
ros2_ws/src/ai_follower/: package.xml  setup.py
ros2_ws/src/ai_follower/ai_follower/: follow_node.py  mavlink_interface.py  vision_node.py
ros2_ws/src/ai_follower/config/: params.yaml
ros2_ws/src/ai_follower/launch/: sim_follow.launch.py
worlds/: empty_follow.world.sdf
